Add ignore rules for output directory
This commit adds ignore rules to the .gitignore file to ignore everything in the output directory, except for the README.md file. This helps to prevent unnecessary files from being tracked in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # DATASET STUFF
 
+# Ignore everything in the output directory
+output/*
+# Except for README.md
+!output/README.md
+
 # Ignore everything in the data directory
 data/*
 # Except for README.md
